--- a/dune
+++ b/dune
@@ -2,9 +2,9 @@
   (name hkdf)
   (public_name hkdf)
   (modules hkdf)
-  (libraries cstruct mirage-crypto))
+  (libraries digestif))
 
 (test
   (name rfctests)
   (modules rfctests)
-  (libraries alcotest hkdf))
+  (libraries alcotest hkdf ohex))
