--- a/hkdf.opam
+++ b/hkdf.opam
@@ -2,16 +2,16 @@ opam-version: "2.0"
 name: "hkdf"
 maintainer: "Hannes Mehnert <hannes@mehnert.org>"
 authors: "Hannes Mehnert <hannes@mehnert.org>"
-license: "BSD2"
+license: "BSD-2-Clause"
 homepage: "https://github.com/hannesm/ocaml-hkdf"
 doc: "https://hannesm.github.io/ocaml-hkdf/doc"
 bug-reports: "https://github.com/hannesm/ocaml-hkdf/issues"
 depends: [
   "ocaml" {>= "4.07.0"}
   "dune"
-  "cstruct" {>= "3.2.0"}
-  "mirage-crypto"
+  "digestif" {>= "1.2.0"}
   "alcotest" {with-test}
+  "ohex" {with-test & >= "0.2.0"}
 ]
 build: [
   ["dune" "subst"] {dev}
@@ -22,5 +22,5 @@ dev-repo: "git+https://github.com/hannesm/ocaml-hkdf.git"
 synopsis: "HMAC-based Extract-and-Expand Key Derivation Function (RFC 5869)"
 description: """
 An implementation of [HKDF](https://tools.ietf.org/html/rfc5869) using
-[nocrypto](https://github.com/mirleft/ocaml-nocrypto).
+[digestif](https://github.com/mirage/digestif).
 """
