--- a/hkdf.opam
+++ b/hkdf.opam
@@ -9,8 +9,8 @@ bug-reports: "https://github.com/hannesm/ocaml-hkdf/issues"
 depends: [
   "ocaml" {>= "4.07.0"}
   "dune"
-  "cstruct" {>= "3.2.0"}
-  "mirage-crypto"
+  "digestif"
+  "ohex" {with-test}
   "alcotest" {with-test}
 ]
 build: [
